Blender 2.80 - Subdivision surface adjust edit cage when is turned on,blender quits #60810

Closed
opened 2019-01-24 02:16:38 +01:00 by Szymon Warunek · 12 comments

{F6390698}Windows 8.1 Pro
Operating system:Windows 8.1 Pro
Graphics card:Geforce Gtx 960 4GB

Blender 2.80
Broken:
(example: 2.79b release)
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)
Worked: (optional)

blender crashes when option cursor to selected is used with objects,which have subdivision surface modifier

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

{[F6390698](https://archive.blender.org/developer/F6390698/subdivision_surface_cage_issue.mov)}**Windows 8.1 Pro** Operating system:Windows 8.1 Pro Graphics card:Geforce Gtx 960 4GB **Blender 2.80** Broken: (example: 2.79b release) (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) Worked: (optional) **blender crashes when option cursor to selected is used with objects,which have subdivision surface modifier** **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @szymi

Added subscriber: @szymi
Author
{[F6384415](https://archive.blender.org/developer/F6384415/wieżowiec.blend)}[Blender 2.80 - Subdivision surface causes blender to quit.mov](https://archive.blender.org/developer/F6384331/Blender_2.80_-_Subdivision_surface_causes_blender_to_quit.mov) ![subdivision surface issue.jpg](https://archive.blender.org/developer/F6384411/subdivision_surface_issue.jpg)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2019-01-24 10:15:14 +01:00
Member

Can confirm this.
Only happens when Adjust cage to modifier result is turned ON

1   mesh_create_edit_loops_points_lines         draw_cache_impl_mesh.c 4243 0x28192f1      
2   DRW_mesh_batch_cache_create_requested       draw_cache_impl_mesh.c 5364 0x2820b1c      
3   draw_object_backbufsel                      drawobject.c           296  0x1de4822      
4   backdrawview3d                              view3d_draw_legacy.c   245  0x1db44b4      
5   ED_view3d_backbuf_validate_with_select_mode view3d_draw_legacy.c   285  0x1db470b      
6   ED_view3d_backbuf_validate                  view3d_draw_legacy.c   291  0x1db472f      
7   unified_findnearest                         editmesh_select.c      1032 0x202a83b      
8   EDBM_select_pick                            editmesh_select.c      2060 0x2032fd8      
9   view3d_select_exec                          view3d_select.c        1959 0x1dd5b4c      
10  view3d_select_invoke                        view3d_select.c        1994 0x1dd5dd1     

I see a typo there, checking...

Can confirm this. Only happens when `Adjust cage to modifier result` is turned ON ``` 1 mesh_create_edit_loops_points_lines draw_cache_impl_mesh.c 4243 0x28192f1 2 DRW_mesh_batch_cache_create_requested draw_cache_impl_mesh.c 5364 0x2820b1c 3 draw_object_backbufsel drawobject.c 296 0x1de4822 4 backdrawview3d view3d_draw_legacy.c 245 0x1db44b4 5 ED_view3d_backbuf_validate_with_select_mode view3d_draw_legacy.c 285 0x1db470b 6 ED_view3d_backbuf_validate view3d_draw_legacy.c 291 0x1db472f 7 unified_findnearest editmesh_select.c 1032 0x202a83b 8 EDBM_select_pick editmesh_select.c 2060 0x2032fd8 9 view3d_select_exec view3d_select.c 1959 0x1dd5b4c 10 view3d_select_invoke view3d_select.c 1994 0x1dd5dd1 ``` I see a typo there, checking...

This issue was referenced by bc32240105

This issue was referenced by bc32240105fe5c847b5935a5f0fec4a697913fb1
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

looks like a typo in dc7e492989

@fclem, D4244 should fix this?

looks like a typo in dc7e492989 @fclem, [D4244](https://archive.blender.org/developer/D4244) should fix this?
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

this error still exists - it is to do with the cage of subdivision surface

this error still exists - it is to do with the cage of subdivision surface
Szymon Warunek changed title from Blender 2.80 - Subdivision surface causes blender to quit to Blender 2.80 - Subdivision surface adjust edit cage when is turned on,blender quits 2019-01-24 16:49:30 +01:00
Author

subdivision surface cage adjust issue.jpg subdivision surface cage adjust issue 2.jpg

![subdivision surface cage adjust issue.jpg](https://archive.blender.org/developer/F6390711/subdivision_surface_cage_adjust_issue.jpg) ![subdivision surface cage adjust issue 2.jpg](https://archive.blender.org/developer/F6390729/subdivision_surface_cage_adjust_issue_2.jpg)
Member

try tomorrows build (or are you building yourself?)

try tomorrows build (or are you building yourself?)
Author

thank you - error has been fixed,it does not come up anymore,thanx for applying fix

thank you - error has been fixed,it does not come up anymore,thanx for applying fix
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60810
No description provided.